k8s/production/redis-cluster-statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster
spec:
  replicas: 8
  template:
    spec:
      containers:
        - name: redis
          resources:
            requests:
              cpu: 2000m
              memory: 52Gi
            limits:
              cpu: 8000m
              memory: 52Gi
