k8s/production/gateway-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-nodeport
  labels:
    app: api-local
spec:
  type: NodePort
  selector:
    app: api-local
  ports:
    - port: 8080
      targetPort: 8000
      protocol: TCP
      name: http
      nodePort: 30081
