k8s/production/services-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ExternalName
  externalName: redis.redis.svc.cluster.local
